[tool.poetry]
name = "config-proxy"
version = "0.1.5"
description = "Configuration proxy that enables specifying both source json path and / or environmental variable in order to get configuration value"
authors = ["Tomas Votava <info@tomasvotava.eu>"]
readme = "README.md"
repository = "https://github.com/tomasvotava/config-proxy"
homepage = "https://tomasvotava.github.io/config-proxy/"
documentation = "https://tomasvotava.github.io/config-proxy/"
keywords = ["configuration", "env", "json", "jsonpath"]


[tool.black]
line-length = 119

[tool.poetry.dependencies]
python = "^3.7"
jsonpath-ng = "^1.5.2"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.7.2"
pdoc3 = "^0.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
